experimental with wasm file

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>WASM Test</title>
 </head>
-<body style="font-family: monospace">
-    REPLACE THIS FILE WITH YOUR OWN INDEX.HTML
+<body>
+    <h1>WebAssembly Loaded</h1>
+    <p id="output"></p>
+    
+    <script src="hello.js"></script>
+    <script>
+        Module.onRuntimeInitialized = function() {
+            const add = Module.cwrap("add", "number", ["number", "number"]);
+            document.getElementById("output").innerText = "2 + 3 = " + add(2, 3);
+        };
+    </script>
 </body>
 </html>
