using the java to android bridge

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -9,10 +9,6 @@
 	<h1>WebAssembly Loaded</h1>
 	<p id="output"></p>
 	
-	<script>
-		let message = AndroidBridge.sayHello();
-				
-		document.getElementById("output").innerText = message;
-    </script>
+	<script src="/script/script.js"></script>
 </body>
 </html>
